# sciplot-figure-skill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  pyproject.toml  release_acceptance.json  requirements.txt
agents/: openai.yaml
benchmarks/: README.md
docs/: image-to-vba-gap-analysis.md  object-reconstruction-integration-design.md  python-version-support-assessment.md  repository-version-audit.md  sciplot-v2.6.0-engineering-assessment.md
policies/: hybrid-reconstruction-policy-v1.json  journal-review-policy-v1.json  scientific-plot-policy-v1.json
references/: AI_VISUAL_REVIEW.md  AI_VISUAL_REVIEW_PROVIDER.md  BATCH_VISUAL_QA_PROTOCOL.md  CHART_DECISION_MATERIALIZATION.md  CHART_SELECTION.md  CJK_FONT_SUPPORT.md  CONNECTOR_ANCHOR_PROTOCOL.md  DATA_PROFILING.md  DATA_SWAP_PROTOCOL.md  DATA_SWAP_TEMPLATE_PROTOCOL.md  DIGITIZATION_WORKFLOW.md  EXPORT_REQUIREMENTS.md  FIGURE_CONTRACT_PROTOCOL.md  FIGURE_PRIOR_PROTOCOL.md  FREEZE_POLICY.md  HYBRID_RECONSTRUCTION_PROTOCOL.md  JOURNAL_REVIEW_ADVISORY_PROTOCOL.md  JOURNAL_STYLE_PROFILES.md  MIXED_BACKEND_VECTOR_PROTOCOL.md  OBJECT_LEVEL_QA.md  OBJECT_MANIFEST_PROTOCOL.md  OFFICE_EDITABLE_EXPORT.md  POLICY_CONTEXT.md  PRESERVED_RASTER_GEOMETRY.md  QA_PROFILES.md  SCIENTIFIC_FIGURE_ADVISOR.md  SCIENTIFIC_PLOT_POLICIES.md  SHARED_GEOMETRY_PROTOCOL.md  STATISTICAL_REPORTING_PROTOCOL.md  STYLE_APPLICATION.md  TWO_STAGE_RENDERING.md  VISUALSPEC_V1_PROTOCOL.md  VISUALSPEC_V2_PROTOCOL.md  WORKFLOW_PROFILES.md  export-backends.md  r-rendering.md  visualspec_v1_line_demo.json
(+199 files in other folders)
