[project]
name = "sciplot-figure-skill"
version = "2.8.11"
description = "Python-first scientific figure reproduction and validation skill."
requires-python = ">=3.14,<3.15"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "Pillow>=10",
  "pandas>=2.1",
  "openpyxl>=3.1",
  "scikit-image>=0.22",
  "pydantic>=2.6",
  "jsonschema>=4.22",
  "pypdf>=4.2",
  "PyMuPDF>=1.24",
]

[tool.sciplot-figure-skill]
python = "3.14"
